Taking care of the prereq.cfg issues on PostgreSQL.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@5807 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 4149cf74763744b41b4fcd6909d134b1d350e505

--- a/packages/oda/prereq.cfg
+++ b/packages/oda/prereq.cfg
@@ -1,44 +1,1 @@
-[redhat-*:*:*]
-mysql
-perl-DBD-MySQL
-perl-DBI
-mysql-server
-
-[centos:*:*]
-mysql
-perl-DBD-MySQL
-perl-DBI
-mysql-server
-
-[scientific*:*:*]
-mysql
-perl-DBD-MySQL
-perl-DBI
-mysql-server
-
-[fedora*:*:*]
-mysql
-perl-DBD-MySQL
-perl-DBI
-mysql-server
-
-[suse*:*:*]
-mysql
-mysql-client
-perl-DBD-mysql
-perl-DBI
-perl-Data-ShowTable
-
-[debian:*:*]
-libdbi-perl
-
-# differences between mandr* distros should be resolved automatically
-[mandr*:*:*]
-MySQL
-MySQL-client
-perl-DBI
-perl-DBD-mysql
-perl-Data-ShowTable
-MySQL-common
-perl-CGI
-
+prereqs/mysql.cfg
