Moved perl-Qt-compat-suse to common-rpms, this is needed for suse 10.2, too.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@5808 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f06c511d25c159f52ee56ea32252779071be1281

--- a/share/prereqs/perl-Qt/SRPMS/build.cfg
+++ b/share/prereqs/perl-Qt/SRPMS/build.cfg
@@ -2,6 +2,14 @@
 smokeqt
 perl-Qt-mdk10
 
+[sles*:*:*]
+requires: qt3-devel kdelibs3 kdelibs3-devel
+perl-Qt-3.009b2
+
+[suse*:10.2:*]
+requires: qt3-devel kdelibs3 kdelibs3-devel
+perl-Qt-3.009b2
+
 [*:*:*]
 requires: qt-devel kdelibs kdelibs-devel
 perl-Qt-3.009b2
