First try to support Yello Dog Linux (YDL).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@5874 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 054ac29aabfee1cfc3db34344fa7cf1d2790c543

--- a/packages/oda/prereqs/mysql.cfg
+++ b/packages/oda/prereqs/mysql.cfg
@@ -22,6 +22,12 @@ perl-DBD-MySQL
 perl-DBI
 mysql-server
 
+[yellowdog*:*:*]
+perl-DBI
+mysql
+perl-DBD-MySQL
+mysql-server
+
 [suse*:*:*]
 mysql
 mysql-client
