--- a/packages/yume/prereq.cfg
+++ b/packages/yume/prereq.cfg
@@ -38,6 +38,15 @@ yum
 createrepo
 yume
 
+# YDL
+[yellowdog*:*:*]
+perl-IO-Tty
+python-urlgrabber
+python-elementtree
+yum
+createrepo
+yume
+
 [centos*:*:*]
 perl-IO-Tty
 python-urlgrabber
