Switch from Sarge x86 to Etch x96_64.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@5885 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f64c03d626607bcc79b77eedf423cd55ff6e7db7

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -121,13 +121,15 @@ perl-libwww-perl
 !OpenPBS*
 sh: $OSCAR_HOME/scripts/system-sanity
 
-[debian:3:i386]
+[debian:4:x86_64]
 !tftpd
 libdbi-perl
 libdbd-mysql-perl
+libmldbm-perl
 libxml-simple-perl
 perl-tk
 mysql-server-4.1
+mysql-common
 nfs-kernel-server
 debootstrap
 tcpdump
@@ -135,5 +137,4 @@ sh: $OSCAR_HOME/scripts/system-sanity
 
 # default
 [*:*:*]
-!tftp-server.$arch
 sh: $OSCAR_HOME/scripts/system-sanity
