Added xmlstarlet as a prereq to validate xml files against a schema.  Currently used by PSM, but can easily be used by the new config.xml files for OPKG as well.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@5962 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: dc3b215c7add09998080574da673a4b53c4d0cd1

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -44,6 +44,7 @@ perl-CGI
 cdrecord 
 !tftp-server.$arch
 sh: $OSCAR_HOME/scripts/system-sanity
+xmlstarlet
 
 [fedora:*:*]
 apr
@@ -70,6 +71,7 @@ ntp
 !tftp-server.$arch
 !lam
 sh: $OSCAR_HOME/scripts/system-sanity
+xmlstarlet
 
 [redhat*|centos*|scientificlinux*:*:*]
 dhcp
@@ -93,6 +95,7 @@ ntp
 !tftp-server.$arch
 !lam
 sh: $OSCAR_HOME/scripts/system-sanity
+xmlstarlet
 
 [*suse*:10*:*]
 dhcp-server
@@ -120,6 +123,7 @@ perl-libwww-perl
 !mpich-devel
 !OpenPBS*
 sh: $OSCAR_HOME/scripts/system-sanity
+xmlstarlet
 
 [debian:4:x86_64]
 !tftpd
@@ -135,6 +139,7 @@ nfs-kernel-server
 debootstrap
 tcpdump
 sh: $OSCAR_HOME/scripts/system-sanity
+xmlstarlet
 
 # default
 [*:*:*]
