[Qt GUI] Update Installer for the new GUI.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@5983 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 0e1f3f11b6d3699d78d368da32d98642fbfb9d22

--- a/src/Installer/Makefile
+++ b/src/Installer/Makefile
@@ -5,6 +5,9 @@
 # This file is part of the OSCAR software package.
 #
 
+DESTDIR=
+BINDIR=$(DESTDIR)/usr/lib/perl/5.8
+
 # List the binaries needed by the Makefile
 PUIC		=	puic
 PERL_CW		=	/usr/bin/perl -cw
@@ -49,6 +52,10 @@ InstallerImages.pm:
 
 # May need to add extra stuff here, such as creating symbolic links
 all:	$(COMPILEDTARGET)
+
+#install:
+#	cp $(static_pms) $(BINDIR)
+#	cp $(pms) $(BINDIR)
 
 .SUFFIXES:
 .SUFFIXES: .pl .pm .ui
