[Qt GUI] Update Node GroupLister for the new GUI.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@5984 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 4aba340d97dcb3da43dac099940c338130ec9b58

--- a/src/NodeGroupLister/Makefile
+++ b/src/NodeGroupLister/Makefile
@@ -38,6 +38,8 @@ all:	$(COMPILEDTARGET)
 		ln -sf ../Installer/images; \
 		cd ../Installer; ln -sf ../NodeGroupLister
 
+install:
+
 .SUFFIXES:
 .SUFFIXES: .pl .pm .ui
 
