[Qt GUI] Update NodeMgmt for the new GUI.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@5985 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: e9a93ea453080fea7b2ddd92e62e98cbefdda254

--- a/src/NodeMgmt/Makefile
+++ b/src/NodeMgmt/Makefile
@@ -41,6 +41,8 @@ all:	$(COMPILEDTARGET)
 		@ echo "Fixing QWidgetStack problem"   
 		perl -pi -e 's/QWidgetStack/Qt::WidgetStack/' *.p* 
 
+install:
+
 .SUFFIXES:
 .SUFFIXES: .pl .pm .ui
 
