[Qt GUI] Update Opder for the new GUI.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@5986 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 3ac363af90a5101410c164e27d7490201ca8dde8

--- a/src/Opder/Makefile
+++ b/src/Opder/Makefile
@@ -42,6 +42,8 @@ all:	$(COMPILEDTARGET)
 		ln -sf ../Installer/images; \
 		cd ../Installer; ln -sf ../Opder
 
+install:
+
 .SUFFIXES:
 .SUFFIXES: .pl .pm .ui
 
