[Qt GUI] Update Selector for the new GUI.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@5987 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 396c23afe9d00a1f1cae660df14894ead0948ecc

--- a/src/Selector/Makefile
+++ b/src/Selector/Makefile
@@ -39,6 +39,8 @@ all:	$(COMPILEDTARGET)
 		ln -sf ../Installer/images; \
 		cd ../Installer; ln -sf ../Selector
 
+install:
+
 .SUFFIXES:
 .SUFFIXES: .pl .pm .ui
 
