--- a/packages/apitest/SRPMS/build.cfg
+++ b/packages/apitest/SRPMS/build.cfg
@@ -1,3 +1,13 @@
+[sles|suse:*:*]
+requires: python-devel
+python-twisted-1.3.0-4
+apitest
+
+[rhel:*:*]
+requires: python-devel
+python-twisted-1.3.0-4
+apitest
+
 [*:*:*]
 python-twisted
 apitest
