Seconde phase for the fix of the old Qt GUI. Note that the GUI does not yet allow users to do anything; but widgets are fixed.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6041 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 386720a4138ba9b8d1b4f20d910abf77dc8e9197

--- a/src/Installer/Makefile
+++ b/src/Installer/Makefile
@@ -9,7 +9,8 @@ DESTDIR=
 BINDIR=$(DESTDIR)/usr/lib/perl/5.8
 
 # List the binaries needed by the Makefile
-PUIC		=	puic
+# Note that on some Linux distros, puic is NOT in PATH
+PUIC		=	`whereis puic | awk ' { print \$$2 } '`
 PERL_CW		=	/usr/bin/perl -cw
 RM		=	/bin/rm -f
 
