[OSCAR on Debian] Minor modification to support both the x86 and x86_64 architecture.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6045 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 10424b7eb9742d7f2d1365f2c6d1c97b7a588668

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -124,9 +124,10 @@ perl-libwww-perl
 sh: $OSCAR_HOME/scripts/system-sanity
 xmlstarlet
 
-[debian:4:x86_64]
+[debian:4:*]
 !tftpd
 apache2
+dpkg-dev
 libdbi-perl
 libdbd-mysql-perl
 libmldbm-perl
