[OSCAR on Debian] Updates the list of prereqs.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6057 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 9af352c0bac0e32f52c52484f1e46b39ad168d8a

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -127,6 +127,7 @@ xmlstarlet
 [debian:4:*]
 !tftpd
 apache2
+dhcp3-server
 dpkg-dev
 libdbi-perl
 libdbd-mysql-perl
@@ -138,8 +139,9 @@ mysql-common
 nfs-kernel-server
 debootstrap
 tcpdump
-sh: $OSCAR_HOME/scripts/system-sanity
+xinetd
 xmlstarlet
+sh: $OSCAR_HOME/scripts/system-sanity
 
 # default
 [*:*:*]
