Updated ganglia from old version 3.0.3 to version 3.0.4 and added suse 10.2 directory and rpms.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6154 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 5b75c2a19d7ac0334646ff30196ae69f828419af

--- a/packages/ganglia/SRPMS/build.cfg
+++ b/packages/ganglia/SRPMS/build.cfg
@@ -3,6 +3,11 @@ requires: rrdtool
 common: ganglia --target noarch
 ganglia
 
+[sles*:*:*]
+requires: rrdtool
+common: ganglia --target noarch
+ganglia
+
 [*:*:*]
 requires: php-devel
 rrdtool-1.0.49-2
