Updated apitest to build under opensuse 10.2 x86_64. Updated subversion to 12.1.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6157 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 78adba3cd7e86803f6fb69463923fa757a709285

--- a/packages/apitest/SRPMS/build.cfg
+++ b/packages/apitest/SRPMS/build.cfg
@@ -1,6 +1,11 @@
-[sles|suse:*:*]
+[sles:*:*]
 requires: python-devel
 python-twisted-1.3.0-4
+apitest
+
+[suse:*:*]
+requires: python-devel
+requires: python-twisted python-elementtree
 apitest
 
 [rhel:*:*]
