Updated torque to version 2.1.8 and hoping to fix many bugs...
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6194 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 2a0f0d266fd261c03785fb429bda554b262ceb0a

--- a/packages/torque/SRPMS/build.cfg
+++ b/packages/torque/SRPMS/build.cfg
@@ -1,4 +1,9 @@
-[*:*:*]
-requires: tk-devel tcl-devel
+[rhel*:*:*]
+requires: tk-devel tcl-devel tclx-devel pam-devel
 common: torque --target noarch
-torque
+torque-2.1.8
+
+[*:*:*]
+requires: tk-devel tcl-devel pam-devel
+common: torque --target noarch
+torque-2.1.8
