prereqs for sles10
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6254 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: ba837322936ab38f98aad03dd198b9c350be151c

--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -143,6 +143,35 @@ xinetd
 xmlstarlet
 sh: $OSCAR_HOME/scripts/system-sanity
 
+[sles:10:*]
+sqlite2
+dhcp-server
+gd
+nfs-utils
+openssh
+openssl
+tcpdump
+xinetd
+apache2
+apache2-mod_php5
+php5
+expat
+python
+zlib
+zlib-devel
+pwdutils
+libcap
+xntp
+perl-libwww-perl
+pyxml
+!tftp-server.$arch
+!lam
+!lam-devel
+!mpich
+!mpich-devel
+!OpenPBS*
+sh: $OSCAR_HOME/scripts/system-sanity
+
 # default
 [*:*:*]
 sh: $OSCAR_HOME/scripts/system-sanity
