Update prereq.cfg for rhel5-server
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6272 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: b98d9172ea8a20284e91a610ee0e8987486e77b2

--- a/packages/yume/prereq.cfg
+++ b/packages/yume/prereq.cfg
@@ -1,11 +1,24 @@
 # there's no yum in original RHEL, use yum-oscar
-[redhat*:*:*]
+[redhat*:3|4:*]
 perl-IO-Tty
 python-elementtree
 python-urlgrabber
 sqlite
 python-sqlite
+yum
 yum-oscar
+createrepo
+yume
+
+[redhat*:5:*]
+yum-metadata-parser
+perl-IO-Tty
+python-elementtree
+python-urlgrabber
+sqlite
+python-sqlite
+yum
+!yum-oscar
 createrepo
 yume
 
