Updated build.cfg files to ease automatic building with build_oscar_rpms.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6283 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f16daaf2096585cc7f2443d5b6d1be7df41d0acd

--- a/packages/ganglia/SRPMS/build.cfg
+++ b/packages/ganglia/SRPMS/build.cfg
@@ -10,6 +10,7 @@ ganglia
 
 [*:*:*]
 requires: php-devel
+requires: libpng-devel
 rrdtool-1.0.49-2
 requires: ganglia:rrdtool
 common: ganglia --target noarch
