--- a/packages/jobmonarch/SRPMS/build.cfg
+++ b/packages/jobmonarch/SRPMS/build.cfg
@@ -4,10 +4,19 @@ requires: php5-posix
 requires: php5-gd
 requires: php5-mbstring
 requires: php5-mysql
-common: jobmonarch --target noarch
+common: jobmonarch
+pbs_python
+
+[rhel*:*:*]
+requires: php
+requires: php-posix
+requires: php-gd
+requires: php-mbstring
+requires: php-mysql
+common: jobmonarch
 pbs_python
 
 [*:*:*]
-common: jobmonarch --target noarch
+common: jobmonarch
 pbs_python
 
