--- a/packages/lam/SRPMS/build.cfg
+++ b/packages/lam/SRPMS/build.cfg
@@ -13,6 +13,22 @@ common: lam-switcher-module
 requires: torque:torque
 lam-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
 
+[sles*:*:*]
+requires: gcc-fortran
+requires: switcher:modules-oscar
+common: lam-oscar --target noarch
+common: lam-switcher-modulefile
+requires: torque:torque
+lam-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
+
+[rhel:4|5:*]
+requires: gcc-fortran
+requires: switcher:modules-oscar
+common: lam-oscar --target noarch
+common: lam-switcher-modulefile
+requires: torque:torque
+lam-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
+
 # sample config file, might need change for certain distros
 [*:*:*]
 requires: switcher:modules-oscar
