--- a/packages/mpich/SRPMS/build.cfg
+++ b/packages/mpich/SRPMS/build.cfg
@@ -2,7 +2,11 @@
 requires: gcc-fortran
 mpich-ch_p4-gcc-oscar
 
-[fc:5:*]
+[sles:*:*]
+requires: gcc-fortran
+mpich-ch_p4-gcc-oscar
+
+[fc|rhel:5|6|7|8:*]
 requires: gcc-gfortran
 mpich-ch_p4-gcc-oscar
 
