--- a/packages/sis/SRPMS/build.cfg
+++ b/packages/sis/SRPMS/build.cfg
@@ -1,4 +1,26 @@
 # incomplete
+[sles:*:*]
+common: perl-AppConfig
+common: perl-MLDBM
+common: flamethrower
+common: systemconfigurator
+common: systeminstaller-oscar
+common: systemimager
+udpcast
+
+[rhel:4|5:*]
+common: perl-AppConfig
+common: perl-MLDBM
+common: flamethrower
+common: systemconfigurator
+common: systeminstaller-oscar
+common: systemimager
+requires: libtermcap-devel pcre-devel
+atftp
+udpcast
+bittorrent-4.2.2-1.rf --target noarch
+python-crypto-2.0-1.rf
+
 [*:*:*]
 common: perl-AppConfig
 common: perl-MLDBM
