--- a/packages/apitest/SRPMS/build.cfg
+++ b/packages/apitest/SRPMS/build.cfg
@@ -1,18 +1,16 @@
 [sles:*:*]
 requires: python-devel
 python-twisted-1.3.0-4
-apitest
-
-[suse:*:*]
-requires: python-devel
-requires: python-twisted python-elementtree
-apitest
+requires: apitest:python-twisted
+apitest --target noarch
 
 [rhel:*:*]
 requires: python-devel
 python-twisted-1.3.0-4
-apitest
+requires: apitest:python-twisted
+apitest --target noarch
 
 [*:*:*]
 python-twisted
-apitest
+requires: apitest:python-twisted
+apitest --target noarch
