Fixed typo for suse build.cfg.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6285 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: fcb7b28e42a0c030bc65d184c295426bf3606be9

--- a/packages/lam/SRPMS/build.cfg
+++ b/packages/lam/SRPMS/build.cfg
@@ -5,15 +5,7 @@ common: lam-switcher-module
 requires: torque:torque
 lam-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
 
-[suse*:*:*]
-requires: gcc-fortran
-requires: switcher:modules-oscar
-common: lam-oscar --target noarch
-common: lam-switcher-module
-requires: torque:torque
-lam-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
-
-[sles*:*:*]
+[sles|suse:*:*]
 requires: gcc-fortran
 requires: switcher:modules-oscar
 common: lam-oscar --target noarch
