Improved the build.cfg. Changed apitest RPM to build under RHEL5 and suse10.2-x86_64. Updated python-twisted for the same reason.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6294 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 2d017365ae363aacef9e49aaf90b8b64e2d8af62

--- a/packages/apitest/SRPMS/build.cfg
+++ b/packages/apitest/SRPMS/build.cfg
@@ -1,12 +1,17 @@
-[sles:*:*]
+[suse:10*:*]
 requires: python-devel
-python-twisted-1.3.0-4
+requires: python-twisted
+apitest --target noarch
+
+[sles|suse:*:*]
+requires: python-devel
+python-twisted-1.3.0
 requires: apitest:python-twisted
 apitest --target noarch
 
-[rhel:*:*]
+[rhel|fc:*:*]
 requires: python-devel
-python-twisted-1.3.0-4
+python-twisted-1.3.0
 requires: apitest:python-twisted
 apitest --target noarch
 
