--- a/packages/lam/SRPMS/build.cfg
+++ b/packages/lam/SRPMS/build.cfg
@@ -1,6 +1,6 @@
-[fc:5:*]
+[fc:5|6|7|8:*]
 requires: switcher:modules-oscar
-common: lam-oscar --target noarch
+common: lam-oscar --target noarch --define "config_options FC=gfortran --with-tm=/opt/pbs"
 common: lam-switcher-module
 requires: torque:torque
 lam-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
@@ -8,7 +8,7 @@ lam-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
 [sles|suse:*:*]
 requires: gcc-fortran
 requires: switcher:modules-oscar
-common: lam-oscar --target noarch
+common: lam-oscar --target noarch --define "config_options FC=gfortran --with-tm=/opt/pbs"
 common: lam-switcher-modulefile
 requires: torque:torque
 lam-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
@@ -16,7 +16,7 @@ lam-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
 [rhel:4|5:*]
 requires: gcc-fortran
 requires: switcher:modules-oscar
-common: lam-oscar --target noarch
+common: lam-oscar --target noarch --define "config_options FC=gfortran --with-tm=/opt/pbs"
 common: lam-switcher-modulefile
 requires: torque:torque
 lam-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
@@ -24,7 +24,7 @@ lam-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
 # sample config file, might need change for certain distros
 [*:*:*]
 requires: switcher:modules-oscar
-common: lam-oscar --target noarch
+common: lam-oscar --target noarch --define "--with-tm=/opt/pbs"
 common: lam-switcher-module
 requires: torque:torque
 lam-oscar --define "--with-tm=/opt/pbs"
