Minor update of perl-FreezeThaw (package now adds distro name to release). Built most of the rhel5-x86_64 rpms.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6300 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: f70d736a3c4dc43e47204809562291b7e6580496

--- a/packages/sis/SRPMS/build.cfg
+++ b/packages/sis/SRPMS/build.cfg
@@ -1,25 +1,34 @@
 # incomplete
-[sles:*:*]
+[sles|suse:*:*]
 common: perl-AppConfig
 common: perl-MLDBM
 common: flamethrower
 common: systemconfigurator
-common: systeminstaller-oscar
 common: systemimager
+perl-FreezeThaw --target noarch
 udpcast
+requires: libtermcap-devel pcre-devel
+atftp
+requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:s
+ystemimager-server
+common: systeminstaller-oscar
+
 
 [rhel:4|5:*]
 common: perl-AppConfig
 common: perl-MLDBM
 common: flamethrower
 common: systemconfigurator
-common: systeminstaller-oscar
 common: systemimager
+perl-FreezeThaw --target noarch
+udpcast
+python-crypto-2.0-1.rf
 requires: libtermcap-devel pcre-devel
 atftp
-udpcast
+requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server
+common: systeminstaller-oscar
+requires: libtermcap-devel pcre-devel
 bittorrent-4.2.2-1.rf --target noarch
-python-crypto-2.0-1.rf
 
 [*:*:*]
 common: perl-AppConfig
