Unfortunately the dependencies are different for RHEL/FC, SUSE and SLES. A new SRPM will be needed.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6310 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: b9a21bf293b10e8198066ee5c5cb1ff415903385

--- a/packages/sge/SRPMS/build.cfg
+++ b/packages/sge/SRPMS/build.cfg
@@ -1,6 +1,17 @@
+[sles:*:*]
+requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
+requires: openmotif-devel ncurses-devel xorg-x11-devel
+common: sge
+sge
+
+[suse:10*:*]
+requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
+requires: openmotif-devel ncurses-devel xorg-x11-libX11-devel xorg-x11-libXpm-devel
+common: sge
+sge
+
 [*:*:*]
-requires: switcher:modules-oscar
-requires: pvm:pvm
-requires: pvm:pvm-modules-oscar
-common: sge --target noarch
+requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
+requires: openmotif-devel ncurses-devel libX11-devel libXpm-devel
+common: sge
 sge
