Still incomplete but somewhat improved build.cfg.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6314 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: b4c7925efed853f7a9c0f50289b628d62bb3ee54

--- a/packages/sis/SRPMS/build.cfg
+++ b/packages/sis/SRPMS/build.cfg
@@ -4,14 +4,13 @@ common: perl-AppConfig
 common: perl-MLDBM
 common: flamethrower
 common: systemconfigurator
-common: systemimager
 perl-FreezeThaw --target noarch
 udpcast
 requires: libtermcap-devel pcre-devel
 atftp
-requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:s
-ystemimager-server
+requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman-depman packman-depman-rpms
 common: systeminstaller-oscar
+common: systemimager
 
 
 [rhel:4|5:*]
@@ -19,16 +18,16 @@ common: perl-AppConfig
 common: perl-MLDBM
 common: flamethrower
 common: systemconfigurator
-common: systemimager
 perl-FreezeThaw --target noarch
 udpcast
 python-crypto-2.0-1.rf
 requires: libtermcap-devel pcre-devel
 atftp
-requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server
+requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman-depman packman-depman-rpms
 common: systeminstaller-oscar
 requires: libtermcap-devel pcre-devel
 bittorrent-4.2.2-1.rf --target noarch
+common: systemimager
 
 [*:*:*]
 common: perl-AppConfig
@@ -36,9 +35,9 @@ common: perl-MLDBM
 common: flamethrower
 common: systemconfigurator
 common: systeminstaller-oscar
-common: systemimager
 atftp
 udpcast
 bittorrent-4.2.2-1.rf
 python-crypto-2.0-1.rf
 #python-khashmir
+common: systemimager
