Yet another update of the build.cfg.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6319 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 02d523a30d87ca17561f618e145d1032346e9635

--- a/packages/sis/SRPMS/build.cfg
+++ b/packages/sis/SRPMS/build.cfg
@@ -4,7 +4,6 @@ common: perl-AppConfig
 common: perl-MLDBM
 common: flamethrower
 common: systemconfigurator
-perl-FreezeThaw --target noarch
 udpcast
 requires: libtermcap-devel pcre-devel
 atftp
@@ -21,11 +20,10 @@ common: systemconfigurator
 perl-FreezeThaw --target noarch
 udpcast
 python-crypto-2.0-1.rf
-requires: libtermcap-devel pcre-devel
+requires: libtermcap-devel pcre-devel pygtk2-devel
 atftp
 requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman-depman packman-depman-rpms
 common: systeminstaller-oscar
-requires: libtermcap-devel pcre-devel
 bittorrent-4.2.2-1.rf --target noarch
 common: systemimager
 
@@ -34,10 +32,13 @@ common: perl-AppConfig
 common: perl-MLDBM
 common: flamethrower
 common: systemconfigurator
-common: systeminstaller-oscar
-atftp
+perl-FreezeThaw --target noarch
 udpcast
-bittorrent-4.2.2-1.rf
 python-crypto-2.0-1.rf
-#python-khashmir
+requires: libtermcap-devel pcre-devel pygtk2-devel
+atftp
+requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman-depman packman-depman-rpms
+common: systeminstaller-oscar
+bittorrent-4.2.2-1.rf --target noarch
 common: systemimager
+
