--- a/packages/sge/SRPMS/build.cfg
+++ b/packages/sge/SRPMS/build.cfg
@@ -1,17 +1,29 @@
 [sles:*:*]
 requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
-requires: openmotif-devel ncurses-devel xorg-x11-devel
+requires: openmotif-devel ncurses-devel libgcj-devel xorg-x11-devel
 common: sge
 sge
 
 [suse:10*:*]
 requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
-requires: openmotif-devel ncurses-devel xorg-x11-libX11-devel xorg-x11-libXpm-devel
+requires: openmotif-devel ncurses-devel libgcj-devel xorg-x11-libX11-devel xorg-x11-libXpm-devel
+common: sge
+sge
+
+[rhel:4:*]
+requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
+requires: openmotif-devel ncurses-devel libgcj-devel xorg-x11-devel
+common: sge
+sge
+
+[rhel:5:*]
+requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
+requires: openmotif-devel ncurses-devel libgcj-devel xorg-x11-libX11-devel xorg-x11-libXpm-devel
 common: sge
 sge
 
 [*:*:*]
 requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
-requires: openmotif-devel ncurses-devel libX11-devel libXpm-devel
+requires: openmotif-devel ncurses-devel libgcj-devel libX11-devel libXpm-devel
 common: sge
 sge
