Fix for build procedure of systeminstaller-oscar.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6365 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 654c4d45bb58cd3134e3b5b538b3646cf65432f7

--- a/packages/sis/SRPMS/build.cfg
+++ b/packages/sis/SRPMS/build.cfg
@@ -5,10 +5,11 @@ common: perl-MLDBM
 common: flamethrower
 common: systemconfigurator
 udpcast
-requires: libtermcap-devel pcre-devel
+requires: termcap pcre-devel
 atftp
-requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman-depman packman-depman-rpms
+requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman:packman-depman packman:packman-depman-rpms
 common: systeminstaller-oscar
+requires: docbook-utils flex e2fsprogs-devel readline-devel device-mapper-devel
 common: systemimager
 
 
@@ -22,9 +23,10 @@ udpcast
 python-crypto-2.0-1.rf
 requires: libtermcap-devel pcre-devel pygtk2-devel
 atftp
-requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman-depman packman-depman-rpms
+requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman:packman-depman packman:packman-depman-rpms
 common: systeminstaller-oscar
 bittorrent-4.2.2-1.rf --target noarch
+requires: docbook-utils flex e2fsprogs-devel readline-devel device-mapper-devel
 common: systemimager
 
 [*:*:*]
@@ -37,8 +39,9 @@ udpcast
 python-crypto-2.0-1.rf
 requires: libtermcap-devel pcre-devel pygtk2-devel
 atftp
-requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman-depman packman-depman-rpms
+requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman:packman-depman packman:packman-depman-rpms
 common: systeminstaller-oscar
 bittorrent-4.2.2-1.rf --target noarch
+requires: docbook-utils flex e2fsprogs-devel readline-devel device-mapper-devel
 common: systemimager
 
