Fixed a typo in config.xml. Unfortunately opkgc still fails to compile it.
Fixed the build script...


git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6392 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 0263b4f08bd8bfe20aa0ebdc1d888cc95ef93190

--- a/packages/linux-ha/SRPMS/build.cfg
+++ b/packages/linux-ha/SRPMS/build.cfg
@@ -1,26 +1,10 @@
-[sles:*:*]
-requires: glib-devel
-requires: libnet
-requires: libgcrypt-devel
-requires: tcpd-devel
-requires: pam-devel
-requires: gnutls-devel
-requires: python-devel
-requires: ncurses-devel
-requires: openssl-devel
-requires: net-snmp-devel
-requires: ha:swig
+[sles|suse:*:*]
+requires: glib-devel libnet libgcrypt-devel tcpd-devel pam-devel gnutls-devel python-devel ncurses-devel openssl-devel net-snmp-devel
+requires: linux-ha:swig
 heartbeat
 
-[rhel:4:*]
-requires: lm_sensors-devel
-requires: net-snmp-devel
-requires: libnet glib-devel libgcrypt-devel
-requires: gnutls-devel
-requires: ncurses-devel
-requires: tcpd-devel
-requires: pam-devel
-requires: python-devel
-requires: swig
+[rhel|fc:*:*]
+requires: lm_sensors-devel net-snmp-devel libnet glib-devel libgcrypt-devel gnutls-devel ncurses-devel tcpd-devel pam-devel python-devel
+requires: linux-ha:swig
 heartbeat
 
