Fixes to config.xmls such that opkgc is able to compile them.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6394 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 0decca3c146e0cf8a2b51d81417575e49aef1c95

--- a/packages/jobmonarch/SRPMS/build.cfg
+++ b/packages/jobmonarch/SRPMS/build.cfg
@@ -1,22 +1,18 @@
-[sles*:*:*]
-requires: php5
-requires: php5-posix
-requires: php5-gd
-requires: php5-mbstring
-requires: php5-mysql
+[sles|suse:*:*]
+requires: php5 php5-posix php5-gd php5-mbstring php5-mysql
+requires: torque:torque torque:torque-devel
 common: jobmonarch
 pbs_python
 
-[rhel*:*:*]
-requires: php
-requires: php-posix
-requires: php-gd
-requires: php-mbstring
-requires: php-mysql
+[rhel|fc:*:*]
+requires: php php-posix php-gd php-mbstring php-mysql
+requires: torque:torque torque:torque-devel
 common: jobmonarch
 pbs_python
 
 [*:*:*]
+requires: php php-posix php-gd php-mbstring php-mysql
+requires: torque:torque torque:torque-devel
 common: jobmonarch
 pbs_python
 
