--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -96,7 +96,7 @@ ntp
 !lam
 sh: $OSCAR_HOME/scripts/system-sanity
 
-[*suse*:10*:*]
+[*suse*:10.0:*]
 dhcp-server
 gd
 nfs-utils
@@ -107,6 +107,34 @@ xinetd
 apache2
 apache2-mod_php4
 php4
+expat
+python
+zlib
+zlib-devel
+pwdutils
+libcap
+xntp
+perl-libwww-perl
+!tftp-server.$arch
+!lam
+!lam-devel
+!mpich
+!mpich-devel
+!OpenPBS*
+sh: $OSCAR_HOME/scripts/system-sanity
+xmlstarlet
+
+[*suse*:10.2:*]
+dhcp-server
+gd
+nfs-utils
+openssh
+openssl
+tcpdump
+xinetd
+apache2
+apache2-mod_php5
+php5
 expat
 python
 zlib
