First try to add YDL support to build system.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/branches/crispy_5.1@6491 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 10976dd68e628e56ecc8fc6ca8602d1d9e669ae2

--- a/packages/apitest/SRPMS/build.cfg
+++ b/packages/apitest/SRPMS/build.cfg
@@ -9,7 +9,7 @@ python-twisted-1.3.0
 requires: apitest:python-twisted
 apitest --target noarch
 
-[rhel|fc:*:*]
+[rhel|fc|ydl:*:*]
 requires: python-devel
 python-twisted-1.3.0
 requires: apitest:python-twisted
