--- a/packages/linux-ha/SRPMS/build.cfg
+++ b/packages/linux-ha/SRPMS/build.cfg
@@ -12,7 +12,7 @@ requires: net-snmp-devel
 requires: ha:swig
 heartbeat
 
-[rhel:4:*]
+[rhel|ydl:4|5:*]
 requires: lm_sensors-devel
 requires: net-snmp-devel
 requires: libnet glib-devel libgcrypt-devel
