--- a/packages/mpich/SRPMS/build.cfg
+++ b/packages/mpich/SRPMS/build.cfg
@@ -6,7 +6,7 @@ mpich-ch_p4-gcc-oscar
 requires: gcc-fortran
 mpich-ch_p4-gcc-oscar
 
-[fc|rhel:5|6|7|8:*]
+[fc|rhel|ydl:5|6|7|8:*]
 requires: gcc-gfortran
 mpich-ch_p4-gcc-oscar
 
