--- a/packages/sis/SRPMS/build.cfg
+++ b/packages/sis/SRPMS/build.cfg
@@ -13,7 +13,7 @@ requires: docbook-utils flex e2fsprogs-devel readline-devel device-mapper-devel
 common: systemimager
 
 
-[rhel:4|5:*]
+[rhel|ydl:4|5:*]
 common: perl-AppConfig
 common: perl-MLDBM
 common: flamethrower
