--- a/packages/jobmonarch/SRPMS/build.cfg
+++ b/packages/jobmonarch/SRPMS/build.cfg
@@ -7,7 +7,7 @@ requires: php5-mysql
 common: jobmonarch
 pbs_python
 
-[rhel*:*:*]
+[rhel|ydl:*:*]
 requires: php
 requires: php-posix
 requires: php-gd
