--- a/packages/lam/SRPMS/build.cfg
+++ b/packages/lam/SRPMS/build.cfg
@@ -13,7 +13,7 @@ common: lam-switcher-modulefile
 requires: torque:torque
 lam-oscar --define "config_options FC=gfortran --with-tm=/opt/pbs"
 
-[rhel:4|5:*]
+[rhel|ydl:4|5:*]
 requires: gcc-fortran
 requires: switcher:modules-oscar
 common: lam-oscar --target noarch --define "config_options FC=gfortran --with-tm=/opt/pbs"
