--- a/packages/sge/SRPMS/build.cfg
+++ b/packages/sge/SRPMS/build.cfg
@@ -16,7 +16,7 @@ requires: openmotif-devel ncurses-devel libgcj-devel xorg-x11-devel
 common: sge
 sge
 
-[rhel:5:*]
+[rhel|ydl:5:*]
 requires: switcher:modules-oscar pvm:pvm pvm:pvm-modules-oscar
 requires: openmotif-devel ncurses-devel libgcj-devel xorg-x11-libX11-devel xorg-x11-libXpm-devel
 common: sge
