Added packages which are prereqs to oscar-base. Done by removing packages directories which are no prereqs in the temporary copy. Not sure how to do this for debian.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/branches/crispy_5.1@6575 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: b32cfe62664edfbbb44d7ab157e56e82b26f9f6d

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -91,6 +91,7 @@ Scripts for OSCAR clustering base package.
 %{basedir}/images/*
 %{basedir}/install_cluster
 %{basedir}/oscarsamples/*
+%{basedir}/packages/*
 %{basedir}/share/*
 %{basedir}/testing/*
 %{basedir}/tmp/
