--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -83,6 +83,13 @@ Scripts for OSCAR clustering base package.
 
 %files
 %defattr(-,root,root)
+%dir %{basedir}/doc/
+%dir %{basedir}/images/
+%dir %{basedir}/oscarsamples/
+%dir %{basedir}/packages/
+%dir %{basedir}/share/
+%dir %{basedir}/testing/
+%dir %{basedir}/tmp/
 %{basedir}/COPYING
 %{basedir}/CREDITS
 %{basedir}/README
@@ -104,12 +111,17 @@ Scripts for OSCAR clustering base package.
 
 %files libs
 %defattr(-,root,root)
+%dir %{basedir}/lib/
 %{basedir}/lib/*
 
 %files scripts
 %defattr(-,root,root)
+%dir %{basedir}/scripts/
 %{basedir}/scripts/*
 
 %changelog
+* Thu Nov 29 2007 Bernard Li <bernard@vanhpc.org>
+- Added directories to the %files sections so that they will be removed
+  when the RPMs are uninstalled
 * Thu Oct 4 2007 Erich Focht
 - Initial package.
