Include %{basedir} as well (/opt/oscar)
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/branches/crispy_5.1@6603 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 7a91a027dcf87116454ce741409219fec29ad450

--- a/oscar-base.spec.in
+++ b/oscar-base.spec.in
@@ -83,6 +83,7 @@ Scripts for OSCAR clustering base package.
 
 %files
 %defattr(-,root,root)
+%dir %{basedir}/
 %dir %{basedir}/doc/
 %dir %{basedir}/images/
 %dir %{basedir}/oscarsamples/
