--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -174,4 +174,6 @@ sh: $OSCAR_HOME/scripts/system-sanity
 
 # default
 [*:*:*]
+systeminstaller-oscar
+systemimager-client
 sh: $OSCAR_HOME/scripts/system-sanity
