Added section(s) specific for Fedora 8
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/branches/branch-5-1@6751 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: bb31c50c5433bf22b63e63a5c2d6d89b62738c97

--- a/packages/sis/SRPMS/build.cfg
+++ b/packages/sis/SRPMS/build.cfg
@@ -12,7 +12,6 @@ common: systeminstaller-oscar
 requires: docbook-utils flex e2fsprogs-devel readline-devel device-mapper-devel
 common: systemimager
 
-
 [rhel|ydl:4|5:*]
 common: perl-AppConfig
 common: perl-MLDBM
@@ -26,6 +25,19 @@ atftp
 requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman:packman-depman packman:packman-depman-rpms
 common: systeminstaller-oscar
 bittorrent-4.2.2-1.rf --target noarch
+requires: docbook-utils flex e2fsprogs-devel readline-devel device-mapper-devel
+common: systemimager
+
+[fc:8:*]
+common: perl-AppConfig
+common: perl-MLDBM
+common: flamethrower
+common: systemconfigurator
+udpcast
+requires: libtermcap-devel pcre-devel pygtk2-devel
+atftp
+requires: sis:perl-FreezeThaw sis:perl-AppConfig sis:perl-MLDBM sis:systemconfigurator sis:systemimager-common sis:systemimager-server packman:packman-depman packman:packman-depman-rpms
+common: systeminstaller-oscar
 requires: docbook-utils flex e2fsprogs-devel readline-devel device-mapper-devel
 common: systemimager
 
