--- a/packages/yume/SRPMS/build.cfg
+++ b/packages/yume/SRPMS/build.cfg
@@ -20,6 +20,10 @@ requires: yume:sqlite yume:sqlite-devel
 python-sqlite
 yum-oscar
 
+[fc:8:*]
+common: createrepo
+common: yume
+
 [*:*:*]
 common: createrepo
 common: yume
