Update some oscar packages to support RHEL4-X86 on branch-5-1. Most importantly, python-oscar is added to yume to make all the opkg meta rpms work fine with rhel4. (Note: python-2.3.4 of RHEL4 does not work with the opkg meta packages. That's why I rebuilt python-2.4.4 to have an extra python to handle all the opkg meta rpms.) modules-oscar was rebuilt to recognize python-oscar by default. python-oscar is installed on /opt/python-2.4.4 and this would not need to be added to any distros with >python-2.4.* by default. Of course, the newly built modules-oscar would not be needed too if distro with > python-2.4.*.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/branches/branch-5-1@6776 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 1898d72131679506ed289959e5bd189e7e062fcb

--- a/packages/yume/prereq.cfg
+++ b/packages/yume/prereq.cfg
@@ -1,11 +1,14 @@
 # there's no yum in original RHEL, use yum-oscar
 [redhat*:3|4:*]
+tcl
+modules-oscar
 perl-IO-Tty
+python-oscar
 python-elementtree
 python-urlgrabber
 sqlite
 python-sqlite
-yum
+!yum
 yum-oscar
 createrepo
 yume
