Add basic code for the automatic generation of the OSCAR configuration file (/etc/oscar/oscar.conf) based on OSCAR_HOME.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6822 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 6da42877db3b1bf5e00b7b5b97f2c48b7d0b6f4a

--- a/share/oscar.conf
+++ b/share/oscar.conf
@@ -1,8 +1,13 @@
 OSCAR_NETWORK_INTERFACE = eth0
 
-#############################################
-# Location of the different OSCAR component #
-#############################################
+################################################################################
+# Location of the different OSCAR components                                   #
+# Note that variables must follow the following rules:                         #
+#   - if the variable defines a path, the name must end by "_PATH", this is    #
+#     to perform some substitutions.                                           #
+#   - the variable name must be followed by a space, then by "= " (note the    #
+#     space after "=".                                                         #
+################################################################################
 
 # Specify where the OSCAR scripts are
 OSCAR_SCRIPTS_PATH = scripts
