Update the prereqs: - add the AppConfig config file prereq for RPM based system, - update perl-Qt and perl-Tk configuration file (for prereqs) in order to fix a bad behavior on Debian.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6825 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 2bfe84f78ee3366b07188cb30b1cfa55fa44ccc6

--- a/share/prereqs/perl-Qt/prereq.cfg
+++ b/share/prereqs/perl-Qt/prereq.cfg
@@ -3,8 +3,8 @@ kdebindings3
 perl-Qt
 perl-Qt-compat-suse
 
+[mandriva*|redhat*|centos*|scientificlinux*:*:*]
+perl-Qt
+
 [debian:*:*]
 libqt-perl
-
-[*:*:*]
-perl-Qt
