--- a/share/prereqs/perl-Tk/prereq.cfg
+++ b/share/prereqs/perl-Tk/prereq.cfg
@@ -2,6 +2,8 @@
 perl-Tie-Watch
 perl-Tk
 
-# everyone else falls through to the default
-[*:*:*]
+[mandriva*|redhat*|centos*|scientificlinux*:*:*]
 perl-Tk
+
+[debian:*:*]
+perl-tk
