Modify some packages to support SuSE10.3-X86_64
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/branches/branch-5-1@6875 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 57eb2571aee9aa990254f352b8626b22b1407b50

--- a/share/prereqs/perl-Tk/prereq.cfg
+++ b/share/prereqs/perl-Tk/prereq.cfg
@@ -5,6 +5,9 @@ perl-Tk
 [fedora:7|8:*]
 perl-Tk-804.026-1.oscar
 
+[suse:*:*]
+perl-Tk-804.026-1.oscar
+
 # everyone else falls through to the default
 [*:*:*]
 perl-Tk
