On suse 10.3 (and others) perl-Tk is provided by the distro. There is no need for it and specifying a particular version (enforcing the version coming with OSCAR) breaks the install on nodes which have perl-Tk already installed.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/branches/branch-5-1@6878 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 32410a0e5b8f65dcd8ba04320bfc5f415581a963

--- a/share/prereqs/perl-Tk/prereq.cfg
+++ b/share/prereqs/perl-Tk/prereq.cfg
@@ -6,7 +6,10 @@ perl-Tk
 perl-Tk-804.026-1.oscar
 
 [suse:*:*]
-perl-Tk-804.026-1.oscar
+# there is a problem in specifying the exact version
+# if perl-Tk is (may be) installed already from the suse distro
+#perl-Tk-804.026-1.oscar
+perl-Tk
 
 # everyone else falls through to the default
 [*:*:*]
