--- a/share/prereqs/base/prereq.cfg
+++ b/share/prereqs/base/prereq.cfg
@@ -149,6 +149,36 @@ perl-libwww-perl
 !mpich
 !mpich-devel
 !OpenPBS*
+!bluez-test
+sh: $OSCAR_HOME/scripts/system-sanity
+xmlstarlet
+
+[*suse*:10.3:*]
+dhcp-server
+gd
+nfs-kernel-server
+openssh
+openssl
+tcpdump
+xinetd
+apache2
+apache2-mod_php5
+php5
+expat
+python
+zlib
+zlib-devel
+pwdutils
+libcap
+xntp
+perl-libwww-perl
+!tftp-server.$arch
+!lam
+!lam-devel
+!mpich
+!mpich-devel
+!OpenPBS*
+!bluez-test
 sh: $OSCAR_HOME/scripts/system-sanity
 xmlstarlet
 
