Slightly change the management of the configuration file (generic API to get the config) and include an option for the database type (now possible for the new GUI to have a "flat file" database instead of a mysql/postgresql database).
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6882 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: a9c980b803e7140dafa7c041024d9f4635916f45

--- a/share/oscar.conf
+++ b/share/oscar.conf
@@ -1,5 +1,10 @@
 OSCAR_NETWORK_INTERFACE = eth0
 
+# ODA_TYPE specifies the type of database that have to be used for ODA. The two
+# options are 'file' where ODA uses as flat text file, or 'db' where ODA uses
+# a real database (i.e. mysql).
+ODA_TYPE = file
+
 ################################################################################
 # Location of the different OSCAR components                                   #
 # Note that variables must follow the following rules:                         #
