Update the OSCAR configuration file template.
git-svn-id: http://svn.oscar.openclustergroup.org/oscar/trunk@6886 18f9d06c-6ae2-0310-8438-938a554feff9

Former-commit-id: 10280cbbd5fcade5832eab8008431b95e2a8f1a3

--- a/share/oscar.conf
+++ b/share/oscar.conf
@@ -5,6 +5,14 @@ OSCAR_NETWORK_INTERFACE = eth0
 # a real database (i.e. mysql).
 ODA_TYPE = file
 
+# PREREQ_MODE specifies the operation mode associated to the prereqs management.
+# Two modes are possible:
+#   - 'check_only', if a prereq is not in the expected status, we notify the 
+#     user and exit,
+#   - 'check_and_fix', if a prereq is not in the expected status, we try to fix
+#     it.
+PREREQ_MODE = check_only
+
 ################################################################################
 # Location of the different OSCAR components                                   #
 # Note that variables must follow the following rules:                         #
